tests/baselines/reference/blockScopedSameNameFunctionDeclarationES6.errors.txt
tests/cases/compiler/blockScopedSameNameFunctionDeclarationES6.ts(3,18): error TS2393: Duplicate function implementation.
tests/cases/compiler/blockScopedSameNameFunctionDeclarationES6.ts(5,9): error TS2717: No overload expects 1 arguments. The most matching overloads expect 0 arguments.
tests/cases/compiler/blockScopedSameNameFunctionDeclarationES6.ts(8,18): error TS2393: Duplicate function implementation.
tests/cases/compiler/blockScopedSameNameFunctionDeclarationES6.ts(10,9): error TS2717: No overload expects 1 arguments. The most matching overloads expect 0 arguments.
tests/cases/compiler/blockScopedSameNameFunctionDeclarationES6.ts(12,5): error TS2717: No overload expects 1 arguments. The most matching overloads expect 0 arguments.
tests/cases/compiler/blockScopedSameNameFunctionDeclarationES6.ts(16,1): error TS2554: Expected 1 arguments, but got 0.


==== tests/cases/compiler/blockScopedSameNameFunctionDeclarationES6.ts (6 errors) ====
    function foo(a: number) {
        if (a === 10) {
            function foo() { } // duplicate
                     ~~~
!!! error TS2393: Duplicate function implementation.
            foo();
            foo(10); // not ok
            ~~~~~~~
!!! error TS2717: No overload expects 1 arguments. The most matching overloads expect 0 arguments.
        }
        else {
            function foo() { } // duplicate
                     ~~~
!!! error TS2393: Duplicate function implementation.
            foo();
            foo(10);// not ok
            ~~~~~~~
!!! error TS2717: No overload expects 1 arguments. The most matching overloads expect 0 arguments.
        }
        foo(10); // not ok
        ~~~~~~~
!!! error TS2717: No overload expects 1 arguments. The most matching overloads expect 0 arguments.
        foo(); 
    }
    foo(10);
    foo(); // not ok - needs number
    ~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.